created increment module, edited app component to reflect Angular docs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -332,5 +332,6 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- <NgModuleModule></NgModuleModule> -->
 
 <router-outlet />
