code so far, WIP to get components working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -333,5 +333,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <!-- <NgModuleModule></NgModuleModule> -->
+<!-- <IncrementModule></IncrementModule> -->
+<!-- <DecrementComponent></DecrementComponent> -->
+<!-- <IncrementComponent></IncrementComponent> -->
 
 <router-outlet />
