correctly routed component to module to app.components and have a new error.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -333,7 +333,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <!-- <NgModuleModule></NgModuleModule> -->
-<!-- <IncrementModule></IncrementModule> -->
+{{IncrementModule}}
 <!-- <DecrementComponent></DecrementComponent> -->
 <!-- <IncrementComponent></IncrementComponent> -->
 
