Added decrement button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -337,6 +337,12 @@
 <ng-template #increment>
   <app-increment></app-increment>
 </ng-template>
+
+<app-counter [template]="decrement"></app-counter>
+
+<ng-template #decrement>
+  <app-decrement></app-decrement>
+</ng-template>
 <!-- <NgModuleModule></NgModuleModule> -->
 {{IncrementModule}}
 <!-- <DecrementComponent></DecrementComponent> -->
