Color matched to green on GTH page

--- a/src/app/components/increment/increment.component.css
+++ b/src/app/components/increment/increment.component.css
@@ -2,7 +2,7 @@ button[mat-raised-button] {
     border-radius: 30px;
     width: 150px;
     height: 100px;
-    background-color: green;
+    background-color: #4dba79;
     color: aliceblue;
     font-size: 50px;
     font-weight: 800;
