--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,8 @@
     </ng-template>
   </div>
 
+  <p>{{ currentDate | date: "MM-dd-YYY HH:mm:ss" }}</p>
+
 </div>
 
 <!-- Original plan for display. Had difficulty figuring out modules/ components -->
